--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
 }
 
 .untouchable {
@@ -17,4 +18,8 @@ body {
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+}
+
+.pointer {
+  cursor: pointer;
 }
