--- a/src/assets/_fonts.scss
+++ b/src/assets/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-Italic.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-Italic.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-Italic.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-Italic.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-Italic.woff') format('woff'),
+        url('@/assets/fonts/Nunito-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -10,9 +10,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-LightItalic.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-LightItalic.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-LightItalic.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-LightItalic.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-LightItalic.woff') format('woff'),
+        url('@/assets/fonts/Nunito-LightItalic.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
     font-display: swap;
@@ -20,9 +20,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-Black.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-Black.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-Black.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-Black.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-Black.woff') format('woff'),
+        url('@/assets/fonts/Nunito-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -30,9 +30,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-BlackItalic.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-BlackItalic.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-BlackItalic.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-BlackItalic.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-BlackItalic.woff') format('woff'),
+        url('@/assets/fonts/Nunito-BlackItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
     font-display: swap;
@@ -40,9 +40,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-BoldItalic.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-BoldItalic.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-BoldItalic.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-BoldItalic.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-BoldItalic.woff') format('woff'),
+        url('@/assets/fonts/Nunito-BoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -50,9 +50,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-SemiBoldItalic.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-SemiBoldItalic.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-SemiBoldItalic.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-SemiBoldItalic.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-SemiBoldItalic.woff') format('woff'),
+        url('@/assets/fonts/Nunito-SemiBoldItalic.ttf') format('truetype');
     font-weight: 600;
     font-style: italic;
     font-display: swap;
@@ -60,9 +60,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-ExtraBoldItalic.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-ExtraBoldItalic.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-ExtraBoldItalic.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-ExtraBoldItalic.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-ExtraBoldItalic.woff') format('woff'),
+        url('@/assets/fonts/Nunito-ExtraBoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -70,9 +70,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-ExtraLightItalic.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-ExtraLightItalic.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-ExtraLightItalic.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-ExtraLightItalic.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-ExtraLightItalic.woff') format('woff'),
+        url('@/assets/fonts/Nunito-ExtraLightItalic.ttf') format('truetype');
     font-weight: 200;
     font-style: italic;
     font-display: swap;
@@ -80,9 +80,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-MediumItalic.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-MediumItalic.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-MediumItalic.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-MediumItalic.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-MediumItalic.woff') format('woff'),
+        url('@/assets/fonts/Nunito-MediumItalic.ttf') format('truetype');
     font-weight: 500;
     font-style: italic;
     font-display: swap;
@@ -90,9 +90,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-Light.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-Light.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-Light.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-Light.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-Light.woff') format('woff'),
+        url('@/assets/fonts/Nunito-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -100,9 +100,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-ExtraBold.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-ExtraBold.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-ExtraBold.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-ExtraBold.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-ExtraBold.woff') format('woff'),
+        url('@/assets/fonts/Nunito-ExtraBold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -110,9 +110,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-ExtraLight.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-ExtraLight.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-ExtraLight.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-ExtraLight.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-ExtraLight.woff') format('woff'),
+        url('@/assets/fonts/Nunito-ExtraLight.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -120,9 +120,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-SemiBold.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-SemiBold.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-SemiBold.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-SemiBold.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-SemiBold.woff') format('woff'),
+        url('@/assets/fonts/Nunito-SemiBold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -130,9 +130,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-Regular.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-Regular.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-Regular.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-Regular.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-Regular.woff') format('woff'),
+        url('@/assets/fonts/Nunito-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -140,9 +140,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-Medium.woff2') format('woff2'),
-        url('~@/assets/fonts/Nunito-Medium.woff') format('woff'),
-        url('~@/assets/fonts/Nunito-Medium.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-Medium.woff2') format('woff2'),
+        url('@/assets/fonts/Nunito-Medium.woff') format('woff'),
+        url('@/assets/fonts/Nunito-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -150,9 +150,9 @@
 
 @font-face {
     font-family: 'Nunito';
-    src: url('~@/assets/fonts/Nunito-Bold.woff2') format('woff2'),
-    url('~@/assets/fonts/Nunito-Bold.woff') format('woff'),
-    url('~@/assets/fonts/Nunito-Bold.ttf') format('truetype');
+    src: url('@/assets/fonts/Nunito-Bold.woff2') format('woff2'),
+    url('@/assets/fonts/Nunito-Bold.woff') format('woff'),
+    url('@/assets/fonts/Nunito-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
